--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -3,10 +3,12 @@ import Footer from "@/sections/footer.astro";
 import Navbar from "@/sections/navbar.astro";
 import "@/styles/global.css";
 import AnimatedBackground from "@/animations/background/background";
+
+const currentLang = Astro.currentLocale || "en";
 ---
 
 <!doctype html>
-<html lang="es" class="overflow-x-hidden">
+<html lang={currentLang} class="overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
